# grit-guardian

./: .buildinfo  .gitignore  .readthedocs.yaml  README.md  cli_reference.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  user_guide.html
.doctrees/: cli_reference.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree  user_guide.doctree
.doctrees/api/: modules.doctree
.doctrees/development/: architecture.doctree  contributing.doctree
.github/workflows/: docs.yml  test.yml
_modules/: index.html
_modules/grit_guardian/: cli.html
_modules/grit_guardian/analytics/: analytics.html
_modules/grit_guardian/core/: habit_tracker.html  models.html
_modules/grit_guardian/persistence/: database_manager.html
_modules/grit_guardian/pet/: pet.html
_sources/: installation.rst.txt  quickstart.rst.txt  user_guide.rst.txt
_sources/development/: contributing.rst.txt
api/: modules.html
development/: architecture.html  contributing.html
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt  usage.rst
docs/source/: about.rst  cli_reference.rst  conf.py  index.rst  installation.rst  user_guide.rst
docs/source/_static/: .gitkeep
docs/source/api/: modules.rst
docs/source/development/: architecture.rst  contributing.rst  testing.rst
grit_guardian/: cli.py
grit_guardian/analytics/: analytics.py
grit_guardian/core/: habit_tracker.py  models.py
grit_guardian/persistence/: database_manager.py
grit_guardian/pet/: pet.py
tests/: conftest.py  test_analytics.py  test_cli.py  test_database_manager.py  test_habit_tracker.py  test_models.py  test_pet.py
tests/integration/: test_full_workflow.py
